--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "aiohttp>=3.13.3",
     "asyncio>=4.0.0",
     "beautifulsoup4>=4.14.3",
+    "lxml>=6.0.2",
+    "markdownify>=1.2.2",
     "playwright>=1.57.0",
     "requests>=2.32.5",
 ]
